tests/ui/parser/field-name-in-tuple-struct.stderr
error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `:`
  --> $DIR/field-name-in-tuple-struct.rs:3:13
   |
LL | struct Foo(a:u8,b:u8);
   |             ^ expected one of 7 possible tokens
   |
help: if you meant to write a path, use a double colon
   |
LL | struct Foo(a::u8,b:u8);
   |              +
help: if you meant to create a regular struct, use curly braces
   |
LL - struct Foo(a:u8,b:u8);
LL + struct Foo { a:u8,b:u8 }
   |

error: aborting due to 1 previous error

